# NotExpenseBot

./: .env.sample  .gitignore  Cargo.toml  README.md  config-sample.toml  config.sample.toml  data-sample.json
src/: handlers.rs  main.rs  operations.rs  utils.rs
systemd/: notexpensebot.service
