[package]
name = "notexpensebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notion-tools = "0.1.6"
dotenvy = "0.15.7"
fxhash = "0.2.1"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.2"
log2 = "0.1.10"
