[package]
name = "notexpensebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log2 = "0.1.10"
notionrs = "1.0.0-alpha.30"
openssl = { version = "0.10.35", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5.2"
